# pp_blog

./: README.md  pyproject.toml
backend/: main.py
backend/api/: api.py
backend/api/endpoints/: items.py
backend/core/: config.py
src/: fake_db.py  main.py
